add pages and fix styles in components

--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "react-native-maps",
       "expo-router",
       [
         "expo-splash-screen",
