--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -16,10 +16,10 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native": "^7.1.28",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
-    "expo": "~53.0.10",
+    "expo": "~54.0.33",
     "expo-blur": "~14.1.5",
     "expo-camera": "^16.1.7",
     "expo-constants": "~17.1.6",
@@ -28,6 +28,7 @@
     "expo-image": "~2.2.0",
     "expo-linking": "~7.1.5",
     "expo-location": "^18.1.5",
+    "expo-maps": "~0.12.10",
     "expo-router": "~5.0.7",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.9",
@@ -39,8 +40,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "^1.23.8",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
